<resources>
    <string name="app_name">ChatSphere</string>

    <string name="login">Log In</string>
    <string name="signup">Sign Up</string>

    <string name="e_mail">E-mail</string>
    <string name="password">Password</string>
    <string name="re_password">Re-enter Password</string>

    <string name="btn_continue">Continue</string>
    <string name="forgot_your_password">Forgot your password ?</string>
    <string name="or">or</string>

    <string name="log_in_with_google">Log In with Google</string>
    <string name="sign_in_with_google">Sign In with Google</string>
    <string name="log_in_with_facebook">Log In with Facebook</string>
    <string name="sign_in_with_facebook">Sign In with Facebook</string>
    <string name="new_to_chatsphere">New to ChatSphere</string>
    <string name="have_an_account">Have an account</string>
    <string name="navigation_drawer_close">close side bar</string>
    <string name="navigation_drawer_open">open side bar</string>
    <string name="darkorlightmode">dark or light mode</string>
    <string name="settings">Settings</string>
    <string name="invite_friends">Invite Friends</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="_3_37_pm">3:37 pm</string>
    <string name="demo_chat">Shareable chat are now available</string>
    <string name="home">Home</string>
    <string name="log_out">Log Out</string>
    <string name="messsage">Messsage</string>
    <string name="clear_chat_history">Clear chat history</string>
    <string name="confirm">Confirm</string>
    <string name="cancel">Cancel</string>
    <string name="enter_your_unique_name">Enter Your Unique Name</string>
    <string name="copy">Copy</string>
    <string name="delete">Delete</string>


</resources>