<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/grey_dark"
    android:layout_marginTop="1dp">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/userImage"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:src="@drawable/default_person"
        android:layout_margin="15dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/username"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="@string/app_name"
                android:textColor="@color/text_white"
                android:textSize="18sp"
                android:fontFamily="@font/poppins_medium"/>
            <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1"/>
            <TextView
                android:id="@+id/timesent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="@string/_3_37_pm"
                android:textColor="@color/white_grey"/>

        </LinearLayout>
        <TextView
            android:id="@+id/lastmessage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="@string/demo_chat"
            android:textColor="@color/whiter_grey"
            android:textSize="16sp"/>
    </LinearLayout>


</LinearLayout>