<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:background="@color/bg_black"
    tools:context=".Screens.LoginScreen">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_pattern"
        android:orientation="vertical"
        android:padding="20dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/login"
            android:textColor="@color/text_white"
            android:textSize="32sp"
            android:gravity="center_horizontal"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/logo_shape"
            android:backgroundTint="@color/grey"
            android:layout_margin="10dp"
            android:padding="12dp">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/chatsphere_icon"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_name"
                android:textSize="22sp"
                android:textColor="@color/text_white"
                android:paddingTop="5dp"
                android:fontFamily="@font/poppins_medium"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="35dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/e_mail"
                    android:textSize="18sp"
                    android:textColor="@color/text_white"/>
                <EditText
                    android:id="@+id/et_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="7dp"
                    android:hint="@string/e_mail"
                    android:textColor="@color/text_white"
                    android:drawableStart="@drawable/mail_icon"
                    android:drawablePadding="15dp"
                    android:padding="15dp"
                    android:background="@drawable/logo_shape"
                    android:backgroundTint="@color/white_grey"
                    android:autofillHints="emailAddress"
                    android:inputType="textEmailAddress"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="7dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/password"
                    android:textSize="18sp"
                    android:textColor="@color/text_white"/>
                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="7dp">
                    <EditText
                        android:id="@+id/et_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/password"
                        android:drawableStart="@drawable/lock"
                        android:drawablePadding="15dp"
                        android:paddingStart="15dp"
                        android:paddingBottom="15dp"
                        android:paddingTop="15dp"
                        android:paddingEnd="40dp"
                        android:background="@drawable/logo_shape"
                        android:backgroundTint="@color/white_grey"
                        android:autofillHints="emailAddress"
                        android:inputType="textPassword"/>
                    <ImageView
                        android:id="@+id/show_pass_iv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_centerVertical="true"
                        android:layout_marginEnd="10dp"
                        android:alpha="0.7"
                        android:padding="5dp"
                        android:onClick="ShowHidePass"
                        android:src="@drawable/eye_slash"
                        android:contentDescription="presstoshow"
                        tools:ignore="UsingOnClickInXml" />
                </RelativeLayout>

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/logo_shape"
                android:backgroundTint="@color/grey_light"
                android:gravity="center_horizontal"
                android:layout_marginTop="50dp"
                android:padding="10dp">
                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/btn_continue"
                    android:textColor="@color/text_white"
                    android:textAllCaps="false"
                    android:textSize="18sp"
                    app:backgroundTint="@color/grey_light"
                    android:background="@drawable/logo_shape"
                    android:drawableEnd="@drawable/arrow_right"
                    android:paddingStart="100dp"
                    android:paddingEnd="100dp" />
            </LinearLayout>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/forgot_your_password"
                android:textColor="@color/text_white"
                android:textSize="18sp"
                android:layout_marginTop="40dp"
                android:layout_marginBottom="25dp"
                android:layout_gravity="center_horizontal"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_vertical">
                <View
                    android:layout_width="0dp"
                    android:layout_height="1dp"
                    android:background="@color/grey_light"
                    android:layout_weight="1"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/or"
                    android:textColor="@color/text_white"
                    android:textSize="18sp"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"/>
                <View
                    android:layout_width="0dp"
                    android:layout_height="1dp"
                    android:background="@color/grey_light"
                    android:layout_weight="1"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="25dp">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/logo_shape"
                    android:backgroundTint="@color/grey"
                    android:gravity="center_horizontal"
                    tools:ignore="UselessParent">
                    <Button
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:backgroundTint="@color/grey"
                        android:paddingTop="10dp"
                        android:paddingBottom="10dp"
                        android:text="@string/log_in_with_google"
                        android:textAllCaps="false"
                        android:textColor="@color/text_white"
                        android:textSize="18sp"
                        android:drawableLeft="@drawable/google"
                        android:drawablePadding="30dp"
                        tools:ignore="RtlHardcoded" />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/logo_shape"
                    android:backgroundTint="@color/grey"
                    android:gravity="center_horizontal"
                    tools:ignore="UselessParent"
                    android:layout_marginTop="7dp">
                    <Button
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:backgroundTint="@color/grey"
                        android:paddingTop="10dp"
                        android:paddingBottom="10dp"
                        android:text="@string/log_in_with_facebook"
                        android:textAllCaps="false"
                        android:textColor="@color/text_white"
                        android:textSize="18sp"
                        android:drawableLeft="@drawable/facebook"
                        android:drawablePadding="30dp"
                        tools:ignore="RtlHardcoded" />
                </LinearLayout>
            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="30dp"
                android:layout_gravity="center_horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:fontFamily="@font/poppins_light"
                    android:text="@string/new_to_chatsphere"
                    android:textColor="@color/text_white"
                    android:textSize="13sp" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/signup"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:textColor="@color/text_white"
                    android:layout_gravity="center_horizontal"/>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

</ScrollView>